--- a/client/src/Components/Pages/CreateListing.css
+++ b/client/src/Components/Pages/CreateListing.css
@@ -743,7 +743,7 @@
                 align-items: center;
             }
 
-                .fa-soli.fa-location-dot.fld {
+                .fa-solid.fa-location-dot.fld {
                     font-size: 22px;
                     position: absolute;
                     left: 40px;
