--- a/client/src/Components/Pages/HostingDashboard.css
+++ b/client/src/Components/Pages/HostingDashboard.css
@@ -26,6 +26,7 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
         }
 
         .hostingDashboardProfileContainer {
