--- a/client/src/Components/Pages/HostingDashboard.css
+++ b/client/src/Components/Pages/HostingDashboard.css
@@ -14,7 +14,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 0 20px;
+        padding: 0px 60px;
         border-bottom: 1px solid rgba(160, 160, 160, 0.4);
         margin-bottom: 40px;
     }
