--- a/client/src/Components/Sub-Components/Calendar.css
+++ b/client/src/Components/Sub-Components/Calendar.css
@@ -135,14 +135,14 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        align-items: flex-start;
+        justify-content: space-between;
+        align-items: center;
         -webkit-user-drag: none;
     }
 
         .calendarLeftBodyContainer {
             height: 100%;
-            width: 50%;
+            width: 47%;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -150,83 +150,50 @@
             -webkit-user-drag: none;
         }
 
-            .calendarLeft {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin-right: 25px;
-                user-select: none;
-                -webkit-user-drag: none;
-            }
-
-            .calendarRight {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin-left: 25px;
-                user-select: none;
-                -webkit-user-drag: none;
-            }
-
-                thead {
-                    height: 15%;
-                    width: 100%;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-                    -webkit-user-drag: none;
-                }
-
-                    th {
-                        min-height: 42px;
-                        height: 42px;
-                        min-width: 42px;
-                        width: 42px;
-                        text-align: center;
-                        font-size: 12px;
-                        font-weight: bold;
-                        color: var(--gray);
-                        -webkit-user-drag: none;
-                    }
-
-                tbody {
-                    height: 85%;
-                    width: 100%;
-                    -webkit-user-drag: none;
-                }
-
-                    tr {
-                        width: 100%;
-                        -webkit-user-drag: none;
-                    }
-
-                    /* 56 for 1 calendar */
-                        td {
-                            min-height: 42px;
-                            height: 42px;
-                            min-width: 42px;
-                            width: 42px;
-                            text-align: center;
-                            font-size: 13px;
-                            font-weight: bold;
-                            border-radius: 50%;
-                            cursor: pointer;
-                            -webkit-user-drag: none;
-                        }
-
-                            td:hover {
-                                border: 1.5px solid var(--black);
-                            }
 
         .calendarRightBodyContainer {
             height: 100%;
-            width: 50%;
+            width: 47%;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
             -webkit-user-drag: none;
         }
+
+            .calendar {
+                width: 100%;
+            }
+
+            .calendar th {
+                min-height: 40px;
+                height: 40px;
+                min-width: 40px;
+                width: 40px;
+                text-align: center;
+                padding: 8px;
+                width: calc(100% / 7);
+                user-select: none;
+                font-size: 12px;
+                font-weight: bold;
+                color: var(--gray);
+            }
+
+            .calendar td {
+                min-height: 40px;
+                height: 40px;
+                min-width: 40px;
+                width: 40px;
+                text-align: center;
+                width: calc(100% / 7);
+                user-select: none;
+                font-size: 13px;
+                font-weight: bold;
+                border-radius: 50%;
+                cursor: pointer;
+                color: var(--gray);
+            }
+
+            .calendar td:hover {
+                border: 1.5px solid var(--black);
+            }
