--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -12,6 +12,33 @@
     z-index: 100;
 }
 
+.homeHeader2SearchDropdownContainer {
+    height: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 80px;
+    background-color: white;
+}
+
+.homeHeader2SearchDropdown {
+    height: 70px;
+    width: 800px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: 0.1s linear;
+    border: 1px solid rgba(112, 112, 112, 0.1);
+    background-color: rgba(172, 172, 172, 0.2);
+}
+
 .homeHeaderContainer2 {
     height: 300px;
     width: 100%;
