--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -63,6 +63,16 @@
     border-radius: 10px;
 }
 
+    .homeHeader2SearchDropdownPlaceContainer {
+        height: 60px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        color: var(--black);
+    }
+
     .homeHeader2SearchDropdownWhere {
         height: 100%;
         width: 40%;
