--- a/client/src/Components/Sub-Components/HomeHeader.css
+++ b/client/src/Components/Sub-Components/HomeHeader.css
@@ -197,6 +197,7 @@
             font-size: 13.4px;
             color: var(--black);
             font-weight: bold;
+            width: 100%;
         }
 
         .homeHeader2SearchDropdownSubInput::placeholder {
